# Deal-Dex

./: .editorconfig  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  rules.yml
.github/workflows/: ci.yml
scripts/: setup_env.py
src/dealdex/: __init__.py  __main__.py  api.py  cards.py
tests/: test_api.py  test_card_info.py  test_version.py
