[project]
name = "dealdex"
version = "0.1.0"
description = "Deal-Dex - scans marketplaces for trading card deals"
authors = [{name = "You", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "apprise>=1.7",
    "fastapi>=0.111",
    "uvicorn>=0.29",
]

[project.scripts]
dealdex = "dealdex.__main__:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
